src/main/default/objects/Work_Order__c/Work_Order__c.object-meta.xml
<CustomObject>
    <description>The work order is a representation of planned and actual work done to satisfy a need related to equipment such as a preventative maintenance action, a corrective maintenance action or an inspection.</description>
    <label>Work Order</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <namedFilters>
        <fullName>nf_01Ij0000000wVH4EAM_00Nj0000008Hwq7EAC</fullName>
        <active>true</active>
        <field>Preventative_Maintenance_Schedule__c.Template_Work_Order__c</field>
        <filterItems>
            <field>Work_Order__c.IsTemplate__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
        <name>Preventative Maintenance Schedule_Templa</name>
    </namedFilters>
    <pluralLabel>Work Orders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>