src/main/default/objects/Work_Order__c/fields/Actual_Finish_Date__c.field-meta.xml
<CustomField>
    <fullName>Actual_Finish_Date__c</fullName>
    <label>Actual Finish Date</label>
    <type>DateTime</type>
</CustomField>