src/main/default/objects/Work_Order__c/fields/Actual_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Actual_Start_Date__c</fullName>
    <label>Actual Start Date</label>
    <type>DateTime</type>
</CustomField>