src/main/default/objects/Work_Order__c/fields/Equipment_Unit_Number__c.field-meta.xml
<CustomField>
    <fullName>Equipment_Unit_Number__c</fullName>
    <formula>Equipment__r.Unit_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Equipment Unit Number</label>
    <type>Text</type>
</CustomField>