src/main/default/objects/Work_Order__c/fields/IsTemplate__c.field-meta.xml
<CustomField>
    <fullName>IsTemplate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsTemplate</label>
    <type>Checkbox</type>
</CustomField>