src/main/default/objects/Work_Order__c/fields/Note__c.field-meta.xml
<CustomField>
    <fullName>Note__c</fullName>
    <label>Note</label>
    <type>TextArea</type>
</CustomField>