src/main/default/objects/Work_Order__c/fields/Past_Due__c.field-meta.xml
<CustomField>
    <fullName>Past_Due__c</fullName>
    <formula>IF( AND(NOT(IsTemplate__c), NOT( IsCompleted__c ), Due_Date__c &lt; NOW()) , TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Past Due</label>
    <type>Checkbox</type>
</CustomField>