src/main/default/objects/Work_Order__c/fields/Planned_Finish_Date__c.field-meta.xml
<CustomField>
    <fullName>Planned_Finish_Date__c</fullName>
    <label>Planned Finish Date</label>
    <type>DateTime</type>
</CustomField>