src/main/default/objects/Work_Order__c/fields/Planned_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Planned_Start_Date__c</fullName>
    <label>Planned Start Date</label>
    <type>DateTime</type>
</CustomField>