src/main/default/objects/Work_Order__c/fields/Source_PMS__c.field-meta.xml
<CustomField>
    <fullName>Source_PMS__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Source PMS</label>
    <referenceTo>Preventative_Maintenance_Schedule__c</referenceTo>
    <relationshipLabel>Work Orders</relationshipLabel>
    <relationshipName>Work_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>