src/main/default/objects/Work_Order__c/fields/Tracking_Number__c.field-meta.xml
<CustomField>
    <fullName>Tracking_Number__c</fullName>
    <externalId>true</externalId>
    <inlineHelpText>Unique identifier assigned automatically after adding the work order</inlineHelpText>
    <label>Tracking Number</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>