src/main/default/objects/Work_Order__c/fields/Work_Order_Duration__c.field-meta.xml
<CustomField>
    <fullName>Work_Order_Duration__c</fullName>
    <formula>Actual_Finish_Date__c -  Actual_Start_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Work Order Duration</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>