src/main/default/objects/Work_Order__c/recordTypes/Corrective.recordType-meta.xml
<RecordType>
    <fullName>Corrective</fullName>
    <active>true</active>
    <label>Corrective</label>
</RecordType>