src/main/default/objects/Work_Order__c/recordTypes/Preventative_Maintenance.recordType-meta.xml
<RecordType>
    <fullName>Preventative_Maintenance</fullName>
    <active>true</active>
    <label>Preventative Maintenance</label>
</RecordType>