src/main/default/objects/Work_Order__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Tracking_Number__c</columns>
    <columns>NAME</columns>
    <columns>Equipment__c</columns>
    <columns>Due_Date__c</columns>
    <columns>IsTemplate__c</columns>
    <columns>Source_PMS__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Past_Due__c</columns>
    <columns>Status__c</columns>
    <columns>IsCompleted__c</columns>
    <columns>Assigned_To__c</columns>
    <columns>Total_Cost__c</columns>
    <columns>Office__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>