src/main/default/objects/Work_Order__c/listViews/Regular_Work_Orders.listView-meta.xml
<ListView>
    <fullName>Regular_Work_Orders</fullName>
    <columns>Tracking_Number__c</columns>
    <columns>NAME</columns>
    <columns>Equipment__c</columns>
    <columns>Description__c</columns>
    <columns>Due_Date__c</columns>
    <columns>IsCompleted__c</columns>
    <columns>Priority__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>IsTemplate__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Regular Work Orders</label>
    <language>en_US</language>
</ListView>