src/main/default/objects/Work_Order__c/listViews/Templates.listView-meta.xml
<ListView>
    <fullName>Templates</fullName>
    <columns>Tracking_Number__c</columns>
    <columns>NAME</columns>
    <columns>Equipment__c</columns>
    <columns>Description__c</columns>
    <columns>Due_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>IsTemplate__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Templates</label>
    <language>en_US</language>
</ListView>